Bug 85898 - [IVB/HSW]igt/kms_flip subcases sporadically cause *ERROR* uncleared pch fifo underrun on pch transcoder A
Summary: [IVB/HSW]igt/kms_flip subcases sporadically cause *ERROR* uncleared pch fifo ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-05 07:38 UTC by lu hua
Modified: 2016-10-28 08:15 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (119.56 KB, text/plain)
2014-11-05 07:38 UTC, lu hua
no flags Details
dmesg with patch (127.14 KB, text/plain)
2014-11-25 07:20 UTC, lu hua
no flags Details

Description lu hua 2014-11-05 07:38:39 UTC
Created attachment 108932 [details]
dmesg

==System Environment==
--------------------------
Regression:  not sure

Non-working platforms: IVB

==kernel==
--------------------------
drm-intel-nightly/f56717bdf29eb7d6a9ec15f095ea2a6858895473

==Bug detailed description==
It sporadically causes "*ERROR* uncleared pch fifo underrun on pch transcoder A", fail rate: 3/5

output:
IGT-Version: 1.8-ge622850 (x86_64) (Linux: 3.18.0-rc3_drm-intel-nightly_f56717_20141105+ x86_64)
Using monotonic timestamps
Beginning wf_vblank-interruptible on crtc 8, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
............................................................
wf_vblank-interruptible on crtc 8, connector 18: PASSED

Beginning wf_vblank-interruptible on crtc 12, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
............................................................
wf_vblank-interruptible on crtc 12, connector 18: PASSED

Beginning wf_vblank-interruptible on crtc 16, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
............................................................
wf_vblank-interruptible on crtc 16, connector 18: PASSED

Subtest wf_vblank-interruptible: SUCCESS (30.349s)

==Reproduce steps==
---------------------------- 
1. ./kms_flip --run-subtest wf_vblank-interruptible
Comment 1 lu hua 2014-11-07 05:26:30 UTC
subcase rcs-wf_vblank-vs-modeset also has this issue.
[root@x-ivb9 tests]# ./kms_flip --run-subtest rcs-wf_vblank-vs-modeset
IGT-Version: 1.8-ge34240d (x86_64) (Linux: 3.18.0-rc3_drm-intel-nightly_e6b3eb_20141107_debug+ x86_64)
Using monotonic timestamps
Beginning rcs-wf_vblank-vs-modeset on crtc 8, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
.......
rcs-wf_vblank-vs-modeset on crtc 8, connector 18: PASSED

Beginning rcs-wf_vblank-vs-modeset on crtc 12, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
......
rcs-wf_vblank-vs-modeset on crtc 12, connector 18: PASSED

Beginning rcs-wf_vblank-vs-modeset on crtc 16, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
......
rcs-wf_vblank-vs-modeset on crtc 16, connector 18: PASSED

Subtest rcs-wf_vblank-vs-modeset: SUCCESS (65.045s)
You have new mail in /var/spool/mail/root
[root@x-ivb9 tests]# dmesg -r|egrep "<[1-4]>"|grep drm
<3>[ 7658.287754] [drm:intel_set_pch_fifo_underrun_reporting [i915]] *ERROR* uncleared pch fifo underrun on pch transcoder A
<3>[ 7658.287769] [drm:intel_pch_fifo_underrun_irq_handler [i915]] *ERROR* PCH transcoder A FIFO underrun
Comment 2 lu hua 2014-11-13 01:53:13 UTC
It also impacts HSW.
Comment 3 Daniel Vetter 2014-11-18 12:48:41 UTC
I wonder whether we should tune down underrun warnings on the PCH, seems to happen why too often in random circumstances ...
Comment 4 Ville Syrjala 2014-11-18 13:20:55 UTC
(In reply to Daniel Vetter from comment #3)
> I wonder whether we should tune down underrun warnings on the PCH, seems to
> happen why too often in random circumstances ...

IIRC I saw something like this on my IVB, but only with the non-existing VGA connector. I didn't post the patch since I couldn't be sure if it was just specific to that machine. As I recall, the cure involved rearranging the PCH underrun reporting disable/enable points a bit. I can see if I can still reproduce it here and maybe resurrect that patch, or recreate it if I can't find it anymore.
Comment 5 Daniel Vetter 2014-11-18 13:28:16 UTC
(In reply to Ville Syrjala from comment #4)
> (In reply to Daniel Vetter from comment #3)
> > I wonder whether we should tune down underrun warnings on the PCH, seems to
> > happen why too often in random circumstances ...
> 
> IIRC I saw something like this on my IVB, but only with the non-existing VGA
> connector. I didn't post the patch since I couldn't be sure if it was just
> specific to that machine. As I recall, the cure involved rearranging the PCH
> underrun reporting disable/enable points a bit. I can see if I can still
> reproduce it here and maybe resurrect that patch, or recreate it if I can't
> find it anymore.

Well we also have reports that the pch underruns at boot-up/takeover. So something is definitely still amiss and it should be easy to get a few tested-bys from reporters if you have a patch.
Comment 6 Daniel Vetter 2014-11-24 16:02:47 UTC
Please test this patch:

http://patchwork.freedesktop.org/patch/37391/
Comment 7 lu hua 2014-11-25 07:20:41 UTC
Created attachment 109986 [details]
dmesg with patch

Test this patch 5 cycles, it works well.
Comment 8 Jani Nikula 2014-12-02 13:22:55 UTC
commit b68362278af94e1171f5be9d4e44988601fb0439
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Nov 24 17:02:45 2014 +0100

    drm/i915: More cautious with pch fifo underruns
Comment 9 Jari Tahvanainen 2016-10-28 08:15:15 UTC
Closing verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.